add lineas
